fix 100vh on mobile

--- a/src/components/calculator/index.module.css
+++ b/src/components/calculator/index.module.css
@@ -1,4 +1,5 @@
 .outline {
+  height: 100%;
   border-radius: 2vh;
   background-color: rgba(255,255,255,0.2);
   backdrop-filter: blur(2px);
@@ -30,7 +31,7 @@
     border-radius: 0px;
     max-width: 100vw;
     width: 92vw;
-    height: 92vh;
+    height: 92%;
     }
     .outline {
       padding: 0;
